# CommonAPI-SOMEIP-Demo

./: Dockerfile  README.md
project/: CMakeLists.txt
project/fidl/: HelloWorld.fdepl
project/src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
